2005-08-20  Nathaniel Smith  <njs@codesourcery.com>

	* paths.cc (is_absolute): New function.
	(file_path::file_path(vector<path_component>))
	(file_path::split): Implement.

2005-08-20  Nathaniel Smith  <njs@pobox.com>

	* interner.hh (interner): Add a scary constructor that lets us
	insert an initial value and assert that we already knew that the
	value assigned to it would be.  (This lets us make it an inlined
	constant.)

2005-08-20  Nathaniel Smith  <njs@pobox.com>

	* paths.cc: Yet more tests.

2005-08-20  Nathaniel Smith  <njs@pobox.com>
	
	* paths.cc (save_initial_path): Implement.
	Add more tests.
	
2005-08-20  Nathaniel Smith  <njs@codesourcery.com>

	* paths.{cc,hh}: New files.
	* Makefile.am (MOST_SOURCES): Add them.
	* unit_tests.hh (add_paths_tests): Declare.
	* unit_tests.cc (init_unit_test_suite): Add them.
	* platform.hh (get_current_working_dir)
	(change_current_working_dir):  New functions.
	* {unix,win32}/fs.cc: New files.

2005-08-19  Nathaniel Smith  <njs@codesourcery.com>

	* monotone.texi (Tutorial): Tweak wording, use --db at more
	appropriate places.

2005-08-19  Matthew Gregan  <kinetik@orcon.net.nz>

	* tests/t_crlf.at: Adjust expected line count to accomodate diff
	output change.
	* commands.cc (CMD(diff)): Include base revision ID in diff output
	header when diffing against working copy.  Useful to identify what
	revision a patch was created against.
	* std_hooks.lua (ignore_file): Ignore Visual SourceSafe junk.

2005-08-18  Timothy Brownawell  <tbrownaw@gmail.com>

	* std_hooks.lua: accept_testresult_change now only cares about
	testresults listed in MT/wanted-testresults

2005-08-18  Matthew Gregan  <kinetik@orcon.net.nz>

	* INSTALL: Remove outdated references to configure options and
	Solaris build workarounds.
	* configure.ac: Lower gettext requirement from 0.12.1 to 0.11.5.

2005-08-17  Timothy Brownawell  <tbrownaw@gmail.com>

	* sanity.cc (gasp()): When catching an error from dumping a MM'd